[package]
name = "matchmaking-server"
version = "0.0.1"
authors = ["ISellFreeMoney"]
edition = "2021"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.43.0", features = ["full"] }
redis = { version = "0.28.2", features = ["tokio-comp"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

